--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VUE_APP_PRODUCTION_URL=https://mywebsite.com
-VUE_APP_TITLE=Miguel Mur
-VUE_APP_DESCRIPTION=Miguel Mur's portfolio website. Game developer looking for job
+VUE_APP_TITLE=Amparo Rubio
+VUE_APP_DESCRIPTION=Amparo Rubio's portfolio website. Game developer looking for job
 VUE_APP_OGDESCRIPTION=Game developer looking for job
