--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "predeploy":"npm run build",
+  "deploy": "gh-pages -d build",
+  "homepage": "https://amphxros.github.io/Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -45,5 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  }   
 }
