--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "predeploy":"npm run build",
-  "deploy": "gh-pages -d build",
+  
   "homepage": "https://amphxros.github.io/Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
@@ -26,7 +25,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
